feature: Bucket History has been added
